# unsafe_mem

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
inc/: A.h  B.h  base.h  max_type_size_impl.h  unsafe_mem_impl.h
src/: A.cpp  B.cpp  base.cpp
